improve redis rate limit filter